<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints, PxUsage">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:textSize="40sp"
            android:text="@string/inicio_de_sesion"/>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edittext_border"
            android:ems="30"
            android:hint="@string/Nombre_log"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_border"
            android:importantForAutofill="no"
            android:hint="@string/contrasena"
            android:padding="12dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:text="@string/olvido_contrasena"
            android:textColor="#1E88E5" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/ingresar_usuariob"
            android:textColor="#FFFFFF" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>