<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nuevo_user">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints, PxUsage">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_usuario"
            android:textSize="40sp"
            android:layout_marginTop="100dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:ems="30"
            android:background="@drawable/edittext_border"
            android:hint="@string/Nombre"
            android:importantForAutofill="no"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:hint="@string/contrasena"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:background="@drawable/edittext_border"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_usuario"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>